k8s/overlays/testing/mysql-statefulset-tst.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  serviceName: db-service
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: tarekadel/k8s-flask-mysql-database:v13
          args: ["--port=3306"]
          ports:
            - containerPort: 3306
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      imagePullSecrets:
        - name: regcred
  volumeClaimTemplates:
  - metadata:
      name: mysql-persistent-storage
    spec:
      accessModes: ["ReadWriteMany"]
      storageClassName: nfs-storage
      resources:
        requests:
          storage: 1Gi
